gl31-master/src/test/deca/context/valid/complet/asm_meth.deca
// Description:
//    tests de programme correct contextuellement pour complet
//
// Resultats:
//    Succès
//
// Historique:
//    cree le 24/01/2021
class Test{
    void methodeTest() asm ("WSTR \"hello\"");
}
{
    Test t = new Test();
    t.methodeTest();
}