gl31-master/src/test/deca/context/invalid/sansobjet/bad_null.deca
// Description:
//    tests de programme incorrect syntaxiquement pour sans-objet
//
// Resultats:
//    Ligne 9 : Erreur, 'nul' non-valable
//
// Historique:
//    cree le 12/01/2021
{
    int a = nul;
}

